Version 1.4.4
=============

* GitHub #60  - Added separate computation of prior and posterior
with the IMM.

* various pylint compliance changes.

Version 1.4.3
=============

* GitHub #152 fixed docstring for unscented_transform()
* GitHub #154 Fixed bug in LeastSquaresFilter causing it to diverge
* GitHub #155 Mahalanobis computations in several filters did not include
taking the sqrt .

Version 1.4.2
=============

* added a fast inverse of a diagonal matrix function common.inv_diagonal()

* added ability to order Q matrix by dimension or derivative with the helper
functions

* mahalanobis, log-likelihood, and likelihood only computed when requested;
`compute_log_likelihood` attribute removed.

* fix for bug where attributes not saved. GitHub #136

* Many minor typos in docstring and comments fixes

* Added saving of posterior state to classes

* Added exception to IMM if filter bank dimensions do not agree. GitHub #141

* Added Mahalanobis distance to classes that didn't support it

* added flatten() to saver as an convienent way to flatten column vectors
so they will display nicely in the REPL.

* Partially removed dependence on Matplotlib. Matplotlib is only imported
by functions that use plotting. Github #148

* Removed ability to pass in single matrix to batch_filter functions/methods.
Github #147. In general it is impossible to tell if you have a list of matrices,
or an single array, depending on the shape of the arrays and the size of the
input. Rather than try and obscurely fail, make the user pass the correctly
dimensioned data in.

* Github #151 - added ability to specify unscented transform function for
the UKF RTS smoother.

* Compute log-likelihood and mahalanobis only when requested GitHub #139.
Some, but not all classes did this already; I normalized the behavior
across all classes.

* added .gitattributes to force all files to use unix-style line endings

* GitHub #138. Attributes were not being set when z == None on call to