@@ -1752,77 +1752,3 @@ def rts_smoother(Xs, Ps, Fs, Qs):
         P[k] += dot(dot(K[k], P[k+1] - pP[k]), K[k].T)
 
     return (x, P, K, pP)
-
-
-class Saver(object):
-    """
-    Deprecated. Use filterpy.common.Saver instead.
-
-    Helper class to save the states of the KalmanFilter class.
-    Each time you call save() the current states are appended to lists.
-    Generally you would do this once per epoch - predict/update.
-
-    Once you are done filtering you can optionally call to_array()
-    to convert all of the lists to numpy arrays. You cannot safely call
-    save() after calling to_array().
-
-    Examples
-    --------
-
-    .. code-block:: Python
-
-        kf = KalmanFilter(...whatever)
-        # initialize kf here
-
-        saver = Saver(kf) # save data for kf filter
-        for z in zs:
-            kf.predict()
-            kf.update(z)
-
-            saver.save()
-
-        saver.to_array()
-        # plot the 0th element of the state
-        plt.plot(saver.xs[:, 0, 0])
-    """
-
-    def __init__(self, kf, save_current=True):
-        """ Construct the save object, optionally saving the current
-        state of the filter"""
-
-        warnings.warn(
-            'Use filterpy.common.Saver instead of this, as it works for any filter clase',
-            DeprecationWarning)
-
-        self.xs = []
-        self.Ps = []
-        self.Ks = []
-        self.ys = []
-        self.xs_prior = []
-        self.Ps_prior = []
-        self.kf = kf
-        if save_current:
-            self.save()
-
-
-    def save(self):
-        """ save the current state of the Kalman filter"""
-
-        kf = self.kf
-        self.xs.append(np.copy(kf.x))
-        self.Ps.append(np.copy(kf.P))
-        self.Ks.append(np.copy(kf.K))
-        self.ys.append(np.copy(kf.y))
-        self.xs_prior.append(np.copy(kf.x_prior))
-        self.Ps_prior.append(np.copy(kf.P_prior))
-
-
-    def to_array(self):
-        """ convert all of the lists into np.array"""
-
-        self.xs = np.array(self.xs)
-        self.Ps = np.array(self.Ps)
-        self.Ks = np.array(self.Ks)
-        self.ys = np.array(self.ys)
-        self.xs_prior = np.array(self.xs_prior)
-        self.Ps_prior = np.array(self.Ps_prior)
