@@ -1,3 +1,8 @@
+Version 
+=============
+* Removed deprecated filterpy.kalman.Saver class (use 
+filterpy.common.Saver instead)
+
 Version 1.4.4
 =============
 
